--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Side-by-Side Videos</title>
+  <title>ATIC Examples</title>
   <style>
     body {
       display: flex;
@@ -15,13 +15,17 @@
       margin-bottom: 20px;
     }
 
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 20px;
+    }
+
     .video-container {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin: 0 10px;
-      margin-top: 30px;
     }
 
     .video-title {
@@ -36,20 +40,35 @@
   </style>
 </head>
 <body>
-  <h1>Advanced Topics in Control Project</h1>
+  <h1>ETH - Advanced Topics in Control Project</h1>
 
-  <div class="video-container">
-    <h2 class="video-title">With Feed Forward</h2>
-    <video controls autoplay loop>
-      <source src="man_walking_w_ff/vid1.mp4" type="video/mp4">
-    </video>
-  </div>
+  <div class="grid-container">
+    <div class="video-container">
+      <h2 class="video-title">Gaussian without ff</h2>
+      <video controls autoplay loop>
+        <source src="assets/gaussian_wo_ff.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="video-container">
+      <h2 class="video-title">Gaussian with ff</h2>
+      <video controls autoplay loop>
+        <source src="assets/gaussian_w_ff.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="video-container">
+      <h2 class="video-title">Walking man without ff</h2>
+      <video controls autoplay loop>
+        <source src="assets/vid3.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="video-container">
+      <h2 class="video-title">Walking man with ff</h2>
+      <video controls autoplay loop>
+        <source src="assets/vid4.mp4" type="video/mp4">
+      </video>
+    </div>
+    <!-- Repeat the above video-container code for the remaining videos -->
 
-  <div class="video-container">
-    <h2 class="video-title">Without Feed Forward</h2>
-    <video controls autoplay loop>
-      <source src="man_walking_wo_ff/vid2.mp4" type="video/mp4">
-    </video>
   </div>
 </body>
 </html>
