--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
     <div class="video-container">
       <h2 class="video-title">Walking man without ff</h2>
       <video controls autoplay loop>
-        <source src="assets/vid3.mp4" type="video/mp4">
+        <source src="assets/man_walking_wo_ff.mp4" type="video/mp4">
       </video>
     </div>
     <div class="video-container">
       <h2 class="video-title">Walking man with ff</h2>
       <video controls autoplay loop>
-        <source src="assets/vid4.mp4" type="video/mp4">
+        <source src="assets/man_walking_w_ff.mp4" type="video/mp4">
       </video>
     </div>
     <!-- Repeat the above video-container code for the remaining videos -->
