--- a/index.html
+++ b/index.html
@@ -57,18 +57,16 @@
     </div>
     <div class="video-container">
       <h2 class="video-title">Walking man without ff</h2>
-      <video controls autoplay loop>
+      <video controls autoplay loop onloadstart="this.playbackRate = 0.2">
         <source src="assets/man_walking_wo_ff.mp4" type="video/mp4">
       </video>
     </div>
     <div class="video-container">
       <h2 class="video-title">Walking man with ff</h2>
-      <video controls autoplay loop>
+      <video controls autoplay loop onloadstart="this.playbackRate = 0.2">
         <source src="assets/man_walking_w_ff.mp4" type="video/mp4">
       </video>
     </div>
-    <!-- Repeat the above video-container code for the remaining videos -->
-
   </div>
 </body>
 </html>
